--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <td></td>
     <td></td>
     <td></td>
+    <td></td> <!-- NEW 7th column -->
   </tr>
 </table>
 
@@ -41,6 +42,7 @@
     <th class="col-type">type</th>
     <th class="col-notes">completion</th>
     <th></th>
+    <th></th> <!-- NEW 7th column -->
   </tr>
 </thead>
   <tbody id="tableBody">
