--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-  <div class="toggle-all" id="toggleAll">+</div>
+  <!-- toggle moved into header table's 7th column (kept header otherwise empty) -->
 </header>
 
 <!-- Top header table -->
@@ -27,7 +27,17 @@
     <td></td>
     <td></td>
     <td></td>
-    <td></td> <!-- NEW 7th column -->
+    <!-- 7th column: toggle placed here -->
+    <td>
+      <div class="toggle-all" id="toggleAll">
+        <div class="hyphens">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </td>
   </tr>
 </table>
 
